// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rating /> renders default 1`] = `
<Text
  large={false}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer-0-2-1"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders large 1`] = `
<Text
  large={true}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer-0-2-1 ratingContainer_large-0-2-2"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders micro 1`] = `
<Text
  large={false}
  micro={true}
  small={false}
>
  <div
    className="ratingContainer-0-2-1 ratingContainer_micro-0-2-3"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders reviews 1`] = `
<Text
  large={false}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer-0-2-1"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
    />
    <Spacing
      left={0.5}
    >
      100
    </Spacing>
  </div>
</Text>
`;

exports[`<Rating /> renders small 1`] = `
<Text
  large={false}
  micro={false}
  small={true}
>
  <div
    className="ratingContainer-0-2-1 ratingContainer_small-0-2-4"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
    />
  </div>
</Text>
`;
